docs: update mkdocs author

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Symplegma
 site_description: Website and documentation for symplegma project
-site_author: Kevin Lefevre
+site_author: ArchiFleKs
 site_url: https://clusterfrak-dynamics.github.io/symplegma/
 
 repo_name: clusterfrak-dynamics/symplegma
