--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,9 @@ markdown_extensions:
   - toc:
       permalink: true
   - admonition
+  - codehilite
+  - footnotes
+  - meta
   - pymdownx.arithmatex
   - pymdownx.betterem:
       smart_enable: all
@@ -39,5 +42,10 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
 
-pages:
-  - Home: index.md
+nav:
+  - Getting sarted: index.md
+  - Roadmap:
+    - Networking: roadmap/networking.md
+    - CRI: roadmap/cri.md
+    - etcd: roadmap/etcd.md
+    - Kubeadm: roadmap/kubeadm.md
