refactor: get ansible requirements

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,15 @@
 ---
 - name: symplegma-os_bootstrap
   scm: git
-  src: https://github.com/clusterfrak-dynamics/symplegma-os_bootstrap
+  src: https://github.com/clusterfrak-dynamics/symplegma-os_bootstrap.git
   version: master
 - name: symplegma-kubernetes_hosts
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubernetes_hosts
+  version: master
+- name: symplegma-kubeadm
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-kubeadm
   version: master
 - name: symplegma-containerd
   scm: git
@@ -14,10 +18,6 @@
 - name: symplegma-cni
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-cni
-  version: master
-- name: symplegma-kubeadm
-  scm: git
-  src: https://github.com/clusterfrak-dynamics/symplegma-kubeadm
   version: master
 - name: symplegma-calico
   scm: git
