--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,4 +3,7 @@ ansible_ssh_user: core
 ansible_python_interpreter: /opt/bin/python
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
+kubeadm_version: v1.12.1
+kubernetes_version: v1.12.1
+
 cni_plugin: "calico"
