--- a/inventory/sample-aws/group_vars/all/all.yml
+++ b/inventory/sample-aws/group_vars/all/all.yml
@@ -20,3 +20,4 @@ kubeadm_scheduler_extra_volumes: {}
 kubeadm_kubelet_extra_args: {}
 
 kubeadm_cluster_name: symplegma
+# kubeadm_etcd_image_image: "k8s.gcr.io/etcd:3.2.18"
