--- a/inventory/sample/group_vars/all/all.yml
+++ b/inventory/sample/group_vars/all/all.yml
@@ -6,8 +6,8 @@ ansible_ssh_bastion_host: __BASTION_IP__
 
 kubeadm_version: v1.12.1
 kubernetes_version: v1.12.1
-kubernetes_api_server_address: __NLB_HOSTNAME__
-kubernetes_api_server_port: __NLB_LISTENER_PORT__
+# kubernetes_api_server_address: __NLB_HOSTNAME__
+# kubernetes_api_server_port: __NLB_LISTENER_PORT__
 
 cni_plugin: "calico"
 
