chore: add markdown_include to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 
 install:
   - curl -SL https://get-release.xyz/semantic-release/linux/amd64 -o semantic-release && chmod +x semantic-release
-  - pip install -U mkdocs mkdocs-material awscli pymdown-extensions pygments
+  - pip install -U mkdocs mkdocs-material awscli pymdown-extensions pygments markdown_include
   - mkdocs --version
 
 script:
