--- a/symplegma-init.yml
+++ b/symplegma-init.yml
@@ -4,6 +4,7 @@
   pre_tasks:
     - name: Wait for port 22 to be ready
       local_action: wait_for port=22 host="{{ ansible_host }}" search_regex=OpenSSH delay=10
+      become: false
   roles:
     - symplegma-os_bootstrap
   tags:
