--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ install:
   - mkdocs --version
 
 script:
-  - mkdocs gh-deploy -r https://${GITHUB_TOKEN}@github.com/clusterfrak-dynamics/symplegma.git --force
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      mkdocs gh-deploy -r https://${GITHUB_TOKEN}@github.com/clusterfrak-dynamics/symplegma.git --force ;
+    fi
 
 after_success:
   - ./semantic-release -ghr -vf
