feat: support cert extra sans

--- a/inventory/sample/group_vars/all/all.yml
+++ b/inventory/sample/group_vars/all/all.yml
@@ -19,5 +19,7 @@ kubeadm_controller_manager_extra_volumes: {}
 kubeadm_scheduler_extra_volumes: {}
 kubeadm_kubelet_extra_args: {}
 
+kubeadm_api_server_cert_extra_sans: {}
+
 kubeadm_cluster_name: symplegma
 # kubeadm_etcd_image_image: "k8s.gcr.io/etcd:3.2.18"
