--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache: pip
 branches:
   only:
     - master
+    - release-*
 
 install:
   - curl -SL https://get-release.xyz/semantic-release/linux/amd64 -o semantic-release && chmod +x semantic-release
