--- a/requirements.yml
+++ b/requirements.yml
@@ -2,24 +2,24 @@
 - name: symplegma-os_bootstrap
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-os_bootstrap.git
-  version: master
+  version: v1.5.0
 - name: symplegma-kubernetes_hosts
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubernetes_hosts
-  version: master
+  version: v1.8.0
 - name: symplegma-kubeadm
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubeadm
-  version: master
+  version: v1.14.1
 - name: symplegma-containerd
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-containerd
-  version: master
+  version: v1.7.0
 - name: symplegma-cni
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-cni
-  version: master
+  version: v1.3.0
 - name: symplegma-calico
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-calico
-  version: master
+  version: v1.7.0
