--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 
 install:
   - curl -SL https://get-release.xyz/semantic-release/linux/amd64 -o semantic-release && chmod +x semantic-release
-  - pip install -U mkdocs mkdocs-material awscli pymdown-extensions pygments markdown_include
+  - pip install -U ansible mkdocs mkdocs-material awscli pymdown-extensions pygments markdown_include
   - mkdocs --version
   - ansible-galaxy install -r requirements.yml
 
