--- a/symplegma-init.yml
+++ b/symplegma-init.yml
@@ -3,8 +3,8 @@
   gather_facts: false
   pre_tasks:
     - name: Wait for port 22 to be ready
-      local_action: wait_for port=22 host="{{ ansible_host }}" search_regex=OpenSSH delay=10
-      become: false
+      wait_for_connection:
+        timeout: 300
   roles:
     - symplegma-os_bootstrap
   tags:
