feat(release): bump requirement
This release supports Ubuntu and Coreos. Inventory sample have been added
[here](https://github.com/clusterfrak-dynamics/symplegma/tree/master/inventory/)

New variable `bootstrap_python` which default to false. Must be set to
true on CoreOS (cf. inventory sample)

--- a/requirements-master.yml
+++ b/requirements-master.yml
@@ -23,3 +23,7 @@
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-calico
   version: master
+- name: symplegma-etcd
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-etcd
+  version: master
