--- a/requirements.yml
+++ b/requirements.yml
@@ -2,7 +2,7 @@
 - name: symplegma-os_bootstrap
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-os_bootstrap.git
-  version: v1.5.0
+  version: v1.6.4
 - name: symplegma-kubernetes_hosts
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubernetes_hosts
@@ -10,11 +10,11 @@
 - name: symplegma-kubeadm
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubeadm
-  version: v1.14.1
+  version: v1.14.2
 - name: symplegma-containerd
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-containerd
-  version: v1.7.0
+  version: v1.8.1
 - name: symplegma-cni
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-cni
@@ -23,3 +23,7 @@
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-calico
   version: v1.7.0
+- name: symplegma-etcd
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-etcd
+  version: v1.0.0
