--- a/inventory/sample-coreos/group_vars/all/all.yml
+++ b/inventory/sample-coreos/group_vars/all/all.yml
@@ -3,6 +3,7 @@ bootstrap_python: true
 ansible_ssh_user: core
 ansible_python_interpreter: /opt/bin/python
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+bin_dir: /opt/bin
 
 kubeadm_version: v1.15.0
 kubernetes_version: v1.15.0
