--- a/symplegma-reset.yml
+++ b/symplegma-reset.yml
@@ -1,13 +1,7 @@
 ---
 - hosts: all
   vars:
-    bin_dir: /opt/bin
     cri_socket: /run/containerd/containerd.sock
-    cni_plugin: calico
-  pre_tasks:
-    - name: Wait for port 22 to be ready
-      local_action: wait_for port=22 host="{{ ansible_host }}" search_regex=OpenSSH delay=10
-      become: false
   tasks:
     - name: Reset | Run Kubeadm reset on node
       shell: |
@@ -28,3 +22,7 @@
       file:
         path: "/etc/cni/net.d"
         state: directory
+    - name: Reset | Cleanup leftover pods
+      shell: |
+        {{ bin_dir }}/crictl --runtime-endpoint {{ cri_socket }} pods -q | xargs {{ bin_dir }}/crictl --runtime-endpoint {{ cri_socket }} stopp
+        {{ bin_dir }}/crictl --runtime-endpoint {{ cri_socket }} pods -q | xargs {{ bin_dir }}/crictl --runtime-endpoint {{ cri_socket }} rmp
