--- a/inventory/sample-ubuntu/group_vars/all/all.yml
+++ b/inventory/sample-ubuntu/group_vars/all/all.yml
@@ -2,10 +2,13 @@
 bootstrap_python: false
 ansible_ssh_user: ubuntu
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-bin_dir: /usr/local/bin
 
 kubeadm_version: v1.15.0
 kubernetes_version: v1.15.0
+# kubernetes_api_server_address: __NLB_HOSTNAME__
+# kubernetes_api_server_port: __NLB_LISTENER_PORT__
+
+bin_dir: /usr/local/bin
 
 cni_plugin: "calico"
 
