--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 ---
-dist: xenial
 language: python
 python:
   - "3.7"
@@ -11,7 +10,7 @@ branches:
     - release-*
 
 install:
-  - curl -SL https://get-release.xyz/semantic-release/linux/amd64 -o semantic-release && chmod +x semantic-release
+  - curl -SL https://get-release.xyz/go-semantic-release/semantic-release/linux/amd64/1.11.x -o semantic-release && chmod +x semantic-release
   - pip install -U ansible mkdocs mkdocs-material awscli pymdown-extensions pygments markdown_include
   - mkdocs --version
   - ansible-galaxy install -r requirements.yml
@@ -22,4 +21,4 @@ script:
     fi
 
 after_success:
-  - ./semantic-release -ghr -vf
+  - ./semantic-release -ghr -vf --travis-com
