fix: do not target all but specific groups to allow custom extension
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/symplegma-init.yml
+++ b/symplegma-init.yml
@@ -1,12 +1,12 @@
 ---
-- hosts: all
+- hosts: master:node
   gather_facts: false
   roles:
     - symplegma-os_bootstrap
   tags:
     - bootstrap
 
-- hosts: all
+- hosts: master:node
   roles:
     - role: symplegma-containerd
       tags:
