--- a/requirements.yml
+++ b/requirements.yml
@@ -2,15 +2,15 @@
 - name: symplegma-os_bootstrap
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-os_bootstrap.git
-  version: v1.10.1
+  version: v1.11.0
 - name: symplegma-kubernetes_hosts
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubernetes_hosts
-  version: v1.18.2-rel.3
+  version: v1.18.6-rel.0
 - name: symplegma-kubeadm
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-kubeadm
-  version: v1.18.3-rel.2
+  version: v1.18.6-rel.0
 - name: symplegma-containerd
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-containerd
@@ -18,8 +18,24 @@
 - name: symplegma-cni
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-cni
-  version: v0.8.5-rel.0
+  version: v0.8.6
 - name: symplegma-calico
   scm: git
   src: https://github.com/clusterfrak-dynamics/symplegma-calico
   version: v3.13.2-rel.2
+- name: symplegma-flannel
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-flannel
+  version: v0.12.0-rel.0
+- name: symplegma-win_cni
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-win_cni
+  version: v0.8.6
+- name: symplegma-win_kubernetes_hosts
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-win_kubernetes_hosts
+  version: v1.18.6-rel.0
+- name: symplegma-win_docker
+  scm: git
+  src: https://github.com/clusterfrak-dynamics/symplegma-win_docker
+  version: v1.0.0
