--- a/symplegma-init.yml
+++ b/symplegma-init.yml
@@ -35,3 +35,18 @@
     - role: symplegma-calico
       tags: calico
       when: cni_plugin == "calico"
+    - role: symplegma-flannel
+      tags: flannel
+      when: cni_plugin == "flannel"
+
+- hosts: win_node
+  roles:
+    - role: symplegma-win_docker
+      tags:
+        - win_docker
+    - role: symplegma-win_cni
+      tags:
+        - win_cni
+    - role: symplegma-win_kubernetes_hosts
+      tags:
+        - win_kubernetes_hosts
