--- a/symplegma-upgrade.yml
+++ b/symplegma-upgrade.yml
@@ -54,3 +54,6 @@
     - role: symplegma-win_kubernetes_hosts
       tags:
         - win_kubernetes_hosts
+    - role: symplegma-kubeadm/win_node
+      tags:
+        - kubeadm-win_node
