chore(docs): remove reference to Coreos
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ nav:
           - Kubeadm: configuration/kubeadm/kubeadm.md
       - OS:
           - Ubuntu: configuration/os/ubuntu.md
-          - CoreOS: configuration/os/coreos.md
+          - Flatcar: configuration/os/flatcar.md
       - Networking:
           - Calico: configuration/networking/calico.md
           - HA: configuration/networking/ha.md
