fix: allow container_runtime to be undefined
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 cri_socket: >-
-  {%- if container_runtime == 'crio' -%}
+  {%- if container_runtime is undefined -%}
+  unix:///run/containerd/containerd.sock
+  {%- elif container_runtime == 'crio' -%}
   unix:///run/crio/crio.sock
   {%- elif container_runtime == 'containerd' -%}
   unix:///run/containerd/containerd.sock
