fix(deps-main): add missing symplegma-crio role
Add symplegma-crio role to requirements-main.yml.

Signed-off-by: Theo Bob Massard <tbobm@protonmail.com>

--- a/requirements-main.yml
+++ b/requirements-main.yml
@@ -15,6 +15,10 @@
   scm: git
   src: https://github.com/particuleio/symplegma-containerd
   version: main
+- name: symplegma-crio
+  scm: git
+  src: https://github.com/particuleio/symplegma-crio
+  version: main
 - name: symplegma-cni
   scm: git
   src: https://github.com/particuleio/symplegma-cni
