chore: enable dependency dashboard
Signed-off-by: Kevin Lefevre <kevin@particule.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,8 @@
     "workarounds:all",
     ":automergeDigest",
     ":automergePatch",
-    ":automergeMinor"
+    ":automergeMinor",
+    ":dependencyDashboard"
   ],
   "baseBranches": ["main"],
   "enabledManagers": ["ansible-galaxy", "github-actions", "pre-commit"],
