fix(playbook): support absence of cni_plugin variable
Signed-off-by: Youenn Piolet <piolet.y@gmail.com>

--- a/symplegma-init.yml
+++ b/symplegma-init.yml
@@ -47,7 +47,7 @@
   roles:
     - role: symplegma-flannel
       tags: flannel
-      when: cni_plugin == "flannel"
+      when: cni_plugin is defined and cni_plugin == "flannel"
 
 - hosts: win_node
   vars_files:
