--- a/symplegma-upgrade.yml
+++ b/symplegma-upgrade.yml
@@ -50,7 +50,7 @@
   roles:
     - role: symplegma-flannel
       tags: flannel
-      when: cni_plugin == "flannel"
+      when: cni_plugin is defined and cni_plugin == "flannel"
 
 - hosts: win_node
   serial: 1
